add some administrators menu

--- a/src/assets/custom.scss
+++ b/src/assets/custom.scss
@@ -29,6 +29,18 @@ $font-family-base: 'Inter', sans-serif;
   background-color: $additional2 !important;
 }
 
+/* .btn-additional {
+  color: #fff;
+  background: $additional;
+  border-color: $additional;
+}
+
+.btn-additional:hover {
+  color: #fff;
+  background: #358f5f;
+  border-color: #358f5f;
+} */
+
 .text-additional2 {
   color: $additional2 !important;
 }
